deploy/ingress/sockshop/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sockshop-ingress
  namespace: sock-shop
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-sockshop
spec:
  ingressClassName: nginx
  rules:
    - host: sockshop.allwell.cloud
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: front-end
                port:
                  number: 80
  tls:
    - hosts:
        - sockshop.allwell.cloud
      secretName: letsencrypt-sockshop-tls
